AKS scripting/VIYA4/project/deploy/franceavv/sas-bases/overlays/sas-text-sentiment/resources.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    sas.com/kustomize-base: base
    sas.com/registry-sync: default
    sas.com/registry-tags: proxy
  labels:
    app.kubernetes.io/name: sas-text-sentiment
    sas.com/admin: namespace
  name: sas-sentiment
spec:
  ports:
  - name: sentiment
    port: 80
    protocol: TCP
    targetPort: sentiment
  selector:
    app.kubernetes.io/name: sas-text-sentiment
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    sas.com/certificate-file-format: jks
    sas.com/kustomize-base: spring
    sas.com/pod-uses-liveness-probe: http
    sas.com/pod-uses-readiness-probe: http
    sas.com/pod-uses-startup-probe: http
    sidecar.istio.io/proxyCPU: 15m
    sidecar.istio.io/proxyMemory: 115Mi
  labels:
    app.kubernetes.io/name: sas-text-sentiment
    sas.com/admin: namespace
    sas.com/deployment-base: spring
    workload.sas.com/class: stateless
  name: sas-text-sentiment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sas-text-sentiment
  template:
    metadata:
      annotations:
        prometheus.io/path: /internal/metrics
        prometheus.io/port: "10445"
        prometheus.io/scheme: http
        prometheus.io/scrape: "true"
        sas.com/certificate-file-format: jks
        sas.com/kustomize-base: spring
        sas.com/pod-uses-liveness-probe: http
        sas.com/pod-uses-readiness-probe: http
        sas.com/pod-uses-startup-probe: http
        seccomp.security.alpha.kubernetes.io/pod: runtime/default
        sidecar.istio.io/proxyCPU: 15m
        sidecar.istio.io/proxyMemory: 115Mi
      labels:
        app: sas-text-sentiment
        app.kubernetes.io/name: sas-text-sentiment
        workload.sas.com/class: stateless
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: workload.sas.com/class
                operator: In
                values:
                - stateless
            weight: 100
          - preference:
              matchExpressions:
              - key: workload.sas.com/class
                operator: NotIn
                values:
                - compute
                - cas
                - stateful
                - connect
            weight: 50
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.azure.com/mode
                operator: NotIn
                values:
                - system
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - sas-text-sentiment
              topologyKey: kubernetes.io/hostname
            weight: 100
      automountServiceAccountToken: false
      containers:
      - env:
        - name: SAS_K8S_DEPLOYMENT_NAME
          value: sas-text-sentiment
        - name: JAVA_OPTION_SERVER_PORT
        - name: MANAGEMENT_SERVER_PORT
          value: ${sas.${spring.application.name}.management.server.port:10445}
        image: sas-text-sentiment
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - sh
              - -c
              - sleep 5
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /internal/live
            port: http-internal
            scheme: HTTP
          periodSeconds: 10
        name: sas-text-sentiment
        ports:
        - containerPort: 10445
          name: http-internal
          protocol: TCP
        - containerPort: 8184
          name: sentiment
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /internal/ready
            port: http-internal
            scheme: HTTP
          periodSeconds: 10
        resources:
          limits:
            cpu: 2000m
            memory: 1Gi
          requests:
            cpu: 50m
            memory: 650M
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add: []
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
        startupProbe:
          failureThreshold: 180
          httpGet:
            path: /internal/live
            port: http-internal
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        - mountPath: /opt/sas/viya/config/tmp
          name: tmp
      imagePullSecrets: []
      securityContext:
        runAsNonRoot: true
      tolerations:
      - effect: NoSchedule
        key: workload.sas.com/class
        operator: Equal
        value: stateful
      - effect: NoSchedule
        key: workload.sas.com/class
        operator: Equal
        value: stateless
      volumes:
      - emptyDir: {}
        name: tmp
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-sentiment
spec:
  host: sas-sentiment
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /sentiment/
          ttl: 0s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-text-sentiment
    sas.com/admin: namespace
  name: sas-sentiment
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /sentiment
    - uri:
        prefix: /sentiment/
    route:
    - destination:
        host: sas-sentiment
    timeout: 300s
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /sentiment/
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-sentiment
    sas.com/admin: namespace
  name: sas-sentiment
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: sas-sentiment
          servicePort: 80
        path: /sentiment
